<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- POM file generated with GWT webAppCreator -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>tv.dyndns.kishibe.qmaclone</groupId>
  <artifactId>QMAClone</artifactId>
  <packaging>war</packaging>
  <name>tv.dyndns.kishibe.qmaclone.QMAClone</name>

  <properties>

    <!-- Setting maven.compiler.source to something different to 1.8
         needs that you configure the sourceLevel in gwt-maven-plugin since
         GWT compiler 2.8 requires 1.8 (see gwt-maven-plugin block below) -->
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>

    <!-- Don't let your Mac use a crazy non-standard encoding -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <third.party.dir>${project.basedir}/third_party</third.party.dir>
    <zinnia.library.dir>C:/home/nodchip/zinnia/zinnia</zinnia.library.dir>
    <gwt.skipCompilation>true</gwt.skipCompilation>
    <surefire.skip>true</surefire.skip>
    <argLine>-Djdk.net.file.ftpfallback=true -Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED -Djna.library.path=${zinnia.library.dir} -Djava.library.path=${zinnia.library.dir}</argLine>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- ensure all GWT deps use the same version (unless overridden) -->
      <dependency>
        <groupId>org.gwtproject</groupId>
        <artifactId>gwt</artifactId>
        <version>2.12.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.junit.jupiter</groupId>
    	<artifactId>junit-jupiter</artifactId>
    	<version>5.10.2</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.junit.vintage</groupId>
    	<artifactId>junit-vintage-engine</artifactId>
    	<version>5.10.2</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>com.google.guava</groupId>
    	<artifactId>guava</artifactId>
    	<version>33.5.0-jre</version>
    </dependency>
    <dependency>
    	<groupId>com.google.guava</groupId>
    	<artifactId>guava-gwt</artifactId>
    	<version>33.5.0-jre</version>
    </dependency>
    <dependency>
    	<groupId>name.pehl</groupId>
    	<artifactId>piriti-user</artifactId>
    	<version>0.8</version>
    </dependency>
    <dependency>
    	<groupId>com.google.gwt</groupId>
    	<artifactId>gwt-incubator</artifactId>
    	<version>2.0.1</version>
    </dependency>
    <dependency>
    	<groupId>local.legacy</groupId>
    	<artifactId>gwt-visualization</artifactId>
    	<version>1.1.2</version>
    	<scope>system</scope>
    	<systemPath>${third.party.dir}/gwt-visualization-1.1.2.jar</systemPath>
    </dependency>
    <dependency>
    	<groupId>local.legacy</groupId>
    	<artifactId>gwt-web-sockets</artifactId>
    	<version>1.0.0</version>
    	<scope>system</scope>
    	<systemPath>${third.party.dir}/gwt-web-sockets-1.0.0.jar</systemPath>
    </dependency>
    <dependency>
    	<groupId>org.gwtproject</groupId>
    	<artifactId>gwt-user</artifactId>
    </dependency>
    <dependency>
    	<groupId>org.gwtproject</groupId>
    	<artifactId>gwt-servlet</artifactId>
    </dependency>
    <dependency>
    	<groupId>org.gwtproject</groupId>
    	<artifactId>gwt-dev</artifactId>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>com.allen-sauer.gwt.dnd</groupId>
    	<artifactId>gwt-dnd</artifactId>
    	<version>3.3.4</version>
    </dependency>
    <dependency>
    	<groupId>com.google.gwt.inject</groupId>
    	<artifactId>gin</artifactId>
    	<version>2.1.2</version>
    </dependency>
    <dependency>
    	<groupId>commons-dbutils</groupId>
    	<artifactId>commons-dbutils</artifactId>
    	<version>1.8.1</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-dbcp2</artifactId>
    	<version>2.14.0</version>
    </dependency>
    <dependency>
    	<groupId>joda-time</groupId>
    	<artifactId>joda-time</artifactId>
    	<version>2.14.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.lucene</groupId>
    	<artifactId>lucene-core</artifactId>
    	<version>8.11.4</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.lucene</groupId>
    	<artifactId>lucene-analyzers-common</artifactId>
    	<version>8.11.4</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.lucene</groupId>
    	<artifactId>lucene-queries</artifactId>
    	<version>8.11.4</version>
    </dependency>
    <dependency>
    	<groupId>net.java.dev.jna</groupId>
    	<artifactId>jna</artifactId>
    	<version>5.18.1</version>
    </dependency>
    <dependency>
    	<groupId>net.java.dev.jna</groupId>
    	<artifactId>jna-platform</artifactId>
    	<version>5.18.1</version>
    </dependency>
    <dependency>
    	<groupId>com.google.inject</groupId>
    	<artifactId>guice</artifactId>
    	<version>7.0.0</version>
    </dependency>
    <dependency>
    	<groupId>com.google.inject.extensions</groupId>
    	<artifactId>guice-assistedinject</artifactId>
    	<version>7.0.0</version>
    </dependency>
    <dependency>
    	<groupId>com.restfb</groupId>
    	<artifactId>restfb</artifactId>
    	<version>3.5.0</version>
    </dependency>
    <dependency>
    	<groupId>com.google.http-client</groupId>
    	<artifactId>google-http-client</artifactId>
    	<version>2.1.0</version>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-math3</artifactId>
    	<version>3.6.1</version>
    </dependency>
    <dependency>
    	<groupId>commons-fileupload</groupId>
    	<artifactId>commons-fileupload</artifactId>
    	<version>1.6.0</version>
    </dependency>
    <dependency>
    	<groupId>commons-io</groupId>
    	<artifactId>commons-io</artifactId>
    	<version>2.21.0</version>
    </dependency>
    <dependency>
    	<groupId>com.rometools</groupId>
    	<artifactId>rome</artifactId>
    	<version>1.12.2</version>
    </dependency>
    <dependency>
    	<groupId>org.slf4j</groupId>
    	<artifactId>slf4j-jdk14</artifactId>
    	<version>2.0.17</version>
    </dependency>
    <dependency>
    	<groupId>tw.edu.ntu.csie</groupId>
    	<artifactId>libsvm</artifactId>
    	<version>3.35</version>
    </dependency>
    <dependency>
    	<groupId>com.google.truth</groupId>
    	<artifactId>truth</artifactId>
    	<version>1.4.5</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>com.google.guiceberry</groupId>
    	<artifactId>guiceberry</artifactId>
    	<version>3.3.1</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-core</artifactId>
    	<version>5.21.0</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-junit-jupiter</artifactId>
    	<version>5.21.0</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.hamcrest</groupId>
    	<artifactId>hamcrest</artifactId>
    	<version>3.0</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-pool2</artifactId>
    	<version>2.13.1</version>
    </dependency>
    <dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<version>8.0.33</version>
    </dependency>
    <dependency>
    	<groupId>name.pehl</groupId>
    	<artifactId>totoe</artifactId>
    	<version>0.7</version>
    </dependency>
    <dependency>
    	<groupId>name.pehl</groupId>
    	<artifactId>piriti-dev</artifactId>
    	<version>0.8</version>
    </dependency>
    <dependency>
    	<groupId>name.pehl</groupId>
    	<artifactId>piriti-restlet</artifactId>
    	<version>0.8</version>
    </dependency>
    <dependency>
    	<groupId>org.eclipse.jetty</groupId>
    	<artifactId>jetty-server</artifactId>
    	<version>9.4.58.v20250814</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.eclipse.jetty</groupId>
    	<artifactId>jetty-servlet</artifactId>
    	<version>9.4.58.v20250814</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.eclipse.jetty.websocket</groupId>
    	<artifactId>websocket-api</artifactId>
    	<version>9.4.58.v20250814</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.eclipse.jetty.websocket</groupId>
    	<artifactId>websocket-servlet</artifactId>
    	<version>9.4.58.v20250814</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.eclipse.jetty.websocket</groupId>
    	<artifactId>websocket-server</artifactId>
    	<version>9.4.58.v20250814</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>com.sun.mail</groupId>
    	<artifactId>javax.mail</artifactId>
    	<version>1.6.2</version>
    </dependency>
    <dependency>
    	<groupId>javax.websocket</groupId>
    	<artifactId>javax.websocket-api</artifactId>
    	<version>1.1</version>
    	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>com.twitter</groupId>
    	<artifactId>twitter-api-java-sdk</artifactId>
    	<version>2.0.3</version>
    </dependency>
  </dependencies>

  <build>
    <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" update them in DevMode -->
    <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

    <plugins>

      <!-- GWT Maven Plugin-->
      <plugin>
        <groupId>net.ltgt.gwt.maven</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>1.0-rc-8</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <moduleName>tv.dyndns.kishibe.qmaclone.QMAClone</moduleName>
          <moduleShortName>QMAClone</moduleShortName>
          <failOnError>true</failOnError>
          <!-- GWT compiler 2.8 requires 1.8, hence define sourceLevel here if you use
               a different source language for java compilation -->
          <sourceLevel>11</sourceLevel>
          <!-- Compiler configuration -->
          <compilerArgs>
            <!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
            <arg>-compileReport</arg>
            <arg>-XcompilerMetrics</arg>
          </compilerArgs>
          <!-- DevMode configuration -->
          <warDir>${project.build.directory}/${project.build.finalName}</warDir>
          <classpathScope>compile+runtime</classpathScope>
          <!-- URL(s) that should be opened by DevMode (gwt:devmode). -->
          <startupUrls>
            <startupUrl>QMAClone.html</startupUrl>
          </startupUrls>
        </configuration>
      </plugin>

      <!-- Skip normal test execution, we use gwt:test instead -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <skip>${surefire.skip}</skip>
          <argLine>${argLine}</argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <profiles>
    <profile>
      <id>gwt-compile-java25</id>
      <activation>
        <jdk>[25,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>net.ltgt.gwt.maven</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <configuration>
              <jvmArgs>
                <jvmArg>-Djdk.net.file.ftpfallback=true</jvmArg>
                <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
                <jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
              </jvmArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <version>1.0-SNAPSHOT</version>
</project>
